--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/cool.css">
-    <link rel="icon" type="image/x-icon" href="IMG/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="IMG/favicon.ico?">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./index.js"></script>
 </head>
