--- a/end.html
+++ b/end.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/end.css">
-    <link rel="icon" type="image/x-icon" href="IMG/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="IMG/favicon.ico?">
 </head>
 
 <body>
