--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div class="wimg">
         <div class="elements"></div>
 
+        <div class="preload">
+            <img class="pl">
+        </div>
+
         <div class="wbut">
             <button class="tipp glow-on-hover">Tipp</button>
             <button class="benutz glow-on-hover"><a href="IMGs/benutzerhandbuch.pdf"
