add final tipps and ending

--- a/end.html
+++ b/end.html
@@ -16,17 +16,20 @@
         <div class="crawl">
 
             <div class="title">
-                <p>Episode IV</p>
-                <h1>A New Hope</h1>
+                <p>Episode I</p>
+                <h1>Herzlichen Glückwunsch</h1>
             </div>
 
-            <p>It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory
-                against the evil Galactic Empire.</p>
-            <p>During the battle, Rebel spies managed to steal secret plans to the Empire’s ultimate weapon, the DEATH
-                STAR, an armored space station with enough power to destroy an entire planet.</p>
-            <p>Pursued by the Empire’s sinister agents, Princess Leia races home aboard her starship, custodian of the
-                stolen plans that can save her people and restore freedom to the galaxy…</p>
-
+            <p>Liebe Spieler! Sie und Ihr Team haben die Ikarus erfolgreich repariert und das SECONDARY-Triebwerk
+                eingesetzt, um das Spaceshuttle sicher von seinem Kollisionskurs mit der Erde zu manövrieren. Ihr
+                schnelles Denken und Ihre Fähigkeit, als Team zusammenzuarbeiten, haben den Tag gerettet, und der
+                gesamte Planet ist Ihnen für Ihren heldenhaften Einsatz dankbar.</p>
+            <p>Während Sie zur Erde zurückkehren, erhalten Sie eine Nachricht vom Präsidenten der Vereinigten Staaten,
+                der Ihnen und Ihrem Team zu Ihrer Tapferkeit und Ihrem Können gratuliert. Sie werden als Helden
+                gefeiert, und die ganze Welt bejubelt Ihren Triumph.</p>
+            <p>Sie und Ihr Team haben bewiesen, dass Sie wahre Champions sind, und Sie sollten unglaublich stolz auf das
+                sein, was Sie erreicht haben. Vielen Dank, dass ihr den Escape Room "Ikarus Emergency" gespielt habt,
+                und wir hoffen, dass euch das Abenteuer gefallen hat. Bis zum nächsten Mal, Safer Travels!</p>
         </div>
 
     </section>
