--- a/lost.html
+++ b/lost.html
@@ -16,17 +16,23 @@
         <div class="crawl">
 
             <div class="title">
-                <p>Episode IV</p>
-                <h1>A New Hope</h1>
+                <p>Episode I</p>
+                <h1>All Hope Is Lost</h1>
             </div>
 
-            <p>It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory
-                against the evil Galactic Empire.</p>
-            <p>During the battle, Rebel spies managed to steal secret plans to the Empire’s ultimate weapon, the DEATH
-                STAR, an armored space station with enough power to destroy an entire planet.</p>
-            <p>Pursued by the Empire’s sinister agents, Princess Leia races home aboard her starship, custodian of the
-                stolen plans that can save her people and restore freedom to the galaxy…</p>
-
+            <p>Bedauerlicherweise ist es Ihnen nicht gelungen, die Ikarus zu reparieren und die Kollision mit der Erde
+                zu vermeiden. Trotz eurer Bemühungen stürzte das Spaceshuttle auf den Planeten und verursachte
+                weitreichende Zerstörung und den Verlust von Menschenleben.</p>
+            <p>Als sich die Nachricht von der Katastrophe verbreitet, steht die Welt unter Schock und trauert. Große
+                Teile Mitteleuropas und Russlands wurden verwüstet, und das ganze Ausmaß der Schäden wird noch
+                ermittelt. Die Katastrophenhelfer sind unermüdlich im Einsatz, den Betroffenen zu helfen, aber die
+                Aufgabe ist überwältigend.</p>
+            <p>Als Mitglieder der Ikarus-Besatzung haben Sie und Ihr Team das größte Opfer im Dienste Ihres Planeten
+                gebracht. Ihr Mut und Ihre Entschlossenheit werden nicht vergessen werden, und man wird sich an Sie als
+                Helden erinnern, die im Angesicht unvorstellbarer Notlagen alles gegeben haben.</p>
+            <p>Wir danken euch, dass ihr den Escape Room "Ikarus Emergency" gespielt habt, und hoffen, dass euch das
+                Erlebnis trotzdem gefallen hat. Ruhet in Frieden, tapfere Entdecker. Eure Mission mag in einer Tragödie
+                geendet haben, aber euer Vermächtnis wird weiterleben.</p>
         </div>
 
     </section>
