--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="wbut">
             <button class="tipp glow-on-hover">Tipp</button>
-            <button class="benutz glow-on-hover"><a href="IMGs/benutzerhandbuch.pdf"
+            <button class="benutz glow-on-hover"><a href="IMG/BenutzerhandbuchIkarus.pdf"
                     download="benutzerhandbuch.pdf">Benutzerhandbuch</a></button>
         </div>
 
