fix minor things;

--- a/end.html
+++ b/end.html
@@ -28,7 +28,7 @@
                 der Ihnen und Ihrem Team zu Ihrer Tapferkeit und Ihrem Können gratuliert. Sie werden als Helden
                 gefeiert, und die ganze Welt bejubelt Ihren Triumph.</p>
             <p>Sie und Ihr Team haben bewiesen, dass Sie wahre Champions sind, und Sie sollten unglaublich stolz auf das
-                sein, was Sie erreicht haben. Vielen Dank, dass ihr den Escape Room "Ikarus Emergency" gespielt habt,
+                sein, was Sie erreicht haben. Vielen Dank, dass ihr den Escape Room "Raumschiff Ikarus" gespielt habt,
                 und wir hoffen, dass euch das Abenteuer gefallen hat. Bis zum nächsten Mal, Safer Travels!</p>
         </div>
 
