--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="wbut">
             <button class="tipp glow-on-hover">Tipp</button>
             <button class="benutz glow-on-hover"><a href="IMG/BenutzerhandbuchIkarus.pdf"
-                    download="benutzerhandbuch.pdf">Benutzerhandbuch</a></button>
+                    download="benutzerhandbuch.pdf" target="_blank">Benutzerhandbuch</a></button>
         </div>
 
         <div class="wbg">
