--- a/lost.html
+++ b/lost.html
@@ -30,7 +30,7 @@
             <p>Als Mitglieder der Ikarus-Besatzung haben Sie und Ihr Team das größte Opfer im Dienste Ihres Planeten
                 gebracht. Ihr Mut und Ihre Entschlossenheit werden nicht vergessen werden, und man wird sich an Sie als
                 Helden erinnern, die im Angesicht unvorstellbarer Notlagen alles gegeben haben.</p>
-            <p>Wir danken euch, dass ihr den Escape Room "Ikarus Emergency" gespielt habt, und hoffen, dass euch das
+            <p>Wir danken euch, dass ihr den Escape Room "Raumschiff Ikarus" gespielt habt, und hoffen, dass euch das
                 Erlebnis trotzdem gefallen hat. Ruhet in Frieden, tapfere Entdecker. Eure Mission mag in einer Tragödie
                 geendet haben, aber euer Vermächtnis wird weiterleben.</p>
         </div>
